--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
   <!-- <script src="https://aliconnect.github.io/aliconnect.sdk/src/js/aim.js" client_id="cac652da-dcdc-455a-a0de-e32bac08ea06"></script> -->
   <!-- <script src="https://aliconnect.github.io/aliconnect.sdk/src/js/web.js" libraries="sw,init,page"></script> -->
 
-  <title>Proving</title>
+  <title>NonPaint</title>
   <link href="/manifest.json" rel="manifest" crossorigin="anonymous">
   <link href="/assets/img/favicon.png" rel="icon" type="image/png" />
   <link href="/assets/img/apple-touch-icon-180x180.png" rel="apple-touch-icon" />
@@ -31,9 +31,8 @@
   <link href="/assets/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
   <!-- <link href="/assets/css/proving.css" rel="stylesheet" />
   <script src="/assets/js/proving.js"></script> -->
-  <link href="/assets/css/proving.css" rel="stylesheet" />
-  <script src="/assets/js/proving.js"></script>
-  <script src="/assets/js/rename.js"></script>
+  <link href="/assets/css/nonpaint.css" rel="stylesheet" />
+  <script src="/assets/js/nonpaint.js"></script>
 </head>
 <body></body>
 </html>
