--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 
   <title>NonPaint</title>
   <link href="/manifest.json" rel="manifest" crossorigin="anonymous">
-  <link href="/assets/img/favicon.png" rel="icon" type="image/png" />
+  <link href="/assets/img/favicon-192x192.png" rel="icon" type="image/png" />
   <link href="/assets/img/apple-touch-icon-180x180.png" rel="apple-touch-icon" />
   <link href="/assets/img/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
   <link href="/assets/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
