--- a/404.html
+++ b/404.html
@@ -10,8 +10,8 @@
   <link href="https://aliconnect.nl/sdk@0.0.8/src/css/web.css" rel="stylesheet" />
   <script src="https://aliconnect.nl/sdk@0.0.8/dist/js/jszip.js"></script>
   <script src="https://aliconnect.nl/sdk@0.0.8/dist/js/xlsx.js"></script>
-  <script src="https://aliconnect.nl/sdk@0.0.8/src/js/aim.js" client_id="cac652da-dcdc-455a-a0de-e32bac08ea06"></script>
-  <script src="https://aliconnect.nl/sdk@0.0.8/src/js/web.js" libraries="sw,init,page"></script>
+  <script src="https://aliconnect.nl/sdk@0.0.8/src/js/aim.js" client_id="07f58ae2-64b7-4077-a3be-b9ffcf7a9499"></script>
+  <script src="https://aliconnect.nl/sdk@0.0.8/src/js/web.js" libraries="sw"></script>
 
   <!-- <script src="https://aliconnect.nl/sdk/dist/js/jszip.js"></script> -->
   <!-- <script src="https://aliconnect.nl/sdk/dist/js/xlsx.js"></script> -->
